--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 *.iml
-.gradle
-/local.properties
+/.gradle/
+/.idea/modules/
+/.idea/libraries/
+/.idea/caches
 /.idea/workspace.xml
-/.idea/libraries
 /.idea/vcs.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
-
-/.idea/caches
-/shelf/
+local.properties
